[package]
name = "diesel-async"
version = "0.1.0"
authors = ["Georg Semmler <github@weiznich.de>"]
edition = "2018"
autotests = false
license = "AGPL-v3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2", default-features = false}
async-trait = "0.1.51"
futures = "0.3.17"
tokio-postgres = { version = "0.7.2", optional = true}
tokio = { version = "1.12.0", features = ["rt"], optional = true}
mysql_async = { version = "0.29.0", optional = true}
mysql_common = {version = "0.28.0", optional = true}

[dev-dependencies]
tokio = {version = "1.12.0", features = ["rt", "macros"]}
cfg-if = "1"
chrono = "0.4"
diesel = { version = "2",  features = ["chrono"]}

[features]
default = ["postgres", "mysql"]
mysql = ["diesel/mysql_backend", "mysql_async", "mysql_common"]
postgres = ["diesel/postgres_backend", "tokio-postgres", "tokio", "tokio/rt-multi-thread"]


[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true

[patch.crates-io]
diesel = { git = "https://github.com/fakeshadow/diesel.git", rev = "ed2ceeb377c986c1013c6261e44658e3f43725d3" }
